[package]
name = "ethabi"
version = "15.0.1"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Nicholas Rodrigues Lordello <nlordell@gmail.com>",
]
homepage = "https://github.com/rust-ethereum/ethabi"
license = "Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity"]
description = "Easy to use conversion of ethereum contract calls to bytecode."
edition = "2018"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, optional = true }
sha3 = { version = "0.9", default-features = false }
ethereum-types = { version = "0.12.1", default-features = false }
thiserror = { version = "1", optional = true }
uint = { version = "0.9.0", optional = true }

[dev-dependencies]
hex-literal = "0.3"
paste = "1"

[features]
default = [
	"std",
	"full-serde",
	"rlp",
]
std = [
	"hex/std",
	"sha3/std",
	"ethereum-types/std",
	"thiserror",
	"uint/std",
]

# To enable custom `Reader`/`Tokenizer` and `serde` features support
full-serde = [
	"std",
	"serde/std",
	"serde_json/std",
	"uint",
	"ethereum-types/serialize",
]

serde-no-std = [
	"ethereum-types/serialize",
	"serde",
	"serde_json/alloc",
]

codec = [
	"ethereum-types/codec",
]

rlp = [
	"ethereum-types/rlp",
]
